# makepad-flex-layout

./: ARCHITECTURE.md  Cargo.toml  DRAG_DROP_BUG_FIX.md  DRAG_DROP_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  INTEGRATION_GUIDE.md  REFACTORING_PLAN.md  REFACTORING_ROADMAP.md
examples/flex-layout-demo/: Cargo.toml
examples/flex-layout-demo/src/: app.rs  main.rs
src/: app.rs  callbacks.rs  lib.rs  live_design.rs  main.rs  persistence.rs  registry.rs
src/grid/: drop_handler.rs  footer_grid.rs  layout_state.rs  mod.rs  panel_grid.rs
src/panel/: actions.rs  mod.rs  panel.rs
src/shell/: config.rs  footer.rs  header.rs  layout.rs  mod.rs  sidebar.rs  sidebar_menu.rs
src/theme/: colors.rs  mod.rs  styles.rs
