[package]
name = "makepad-app-shell"
version = "0.1.0"
edition = "2021"
description = "Reusable IDE/studio layout shell for Makepad applications"
license = "MIT OR Apache-2.0"

[lib]
name = "makepad_app_shell"
path = "src/lib.rs"

[workspace]
members = ["examples/flex-layout-demo"]

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "rik" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
